Definición de los enlaces y retoques del aspecto gráfico

--- a/about.html
+++ b/about.html
@@ -20,10 +20,10 @@
             <div class="nav-links" id="navLinks">
             <i class="fa fa-times" onclick="hideMenu()" aria-hidden="true"></i>
                 <ul>
-                    <li><a href="">HOME</a></li>
-                    <li><a href="">SOBRE NOSOTROS</a></li>
+                    <li><a href="./index.html">HOME</a></li>
+                    <li><a href="./about.html">SOBRE NOSOTROS</a></li>
                     <li><a href="">NUESTROS PRODUCTOS</a></li>
-                    <li><a href="">CONTACTOS</a></li>
+                    <li><a href="./contact.html">CONTÁCTANOS</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="showMenu()" aria-hidden="true"></i>
@@ -43,7 +43,7 @@
             pueda recomendarnos con sus familiares y conocidos y de esa forma poder seguir manteniendo en alto
             nuestro compromiso con ser la ejor concesionaria del pais.
             </p>
-            <a href="" class="hero-btn red-btn">DESCUBRE AHORA</a>
+            <a href="./contact.html" class="hero-btn red-btn">DESCUBRE AHORA</a>
         </div>
         <div class="about-col">
             <img src="images/about.jpg">
