--- a/contact.html
+++ b/contact.html
@@ -20,15 +20,15 @@
             <div class="nav-links" id="navLinks">
             <i class="fa fa-times" onclick="hideMenu()" aria-hidden="true"></i>
                 <ul>
-                    <li><a href="">HOME</a></li>
-                    <li><a href="">SOBRE NOSOTROS</a></li>
+                    <li><a href="./index.html">HOME</a></li>
+                    <li><a href="./about.html">SOBRE NOSOTROS</a></li>
                     <li><a href="">NUESTROS PRODUCTOS</a></li>
-                    <li><a href="">CONTACTOS</a></li>
+                    <li><a href="./contact.html">CONTÁCTANOS</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="showMenu()" aria-hidden="true"></i>
         </nav>
-        <h1>Contactos</h1>
+        <h1>Contáctanos</h1>
     </section>
 
 <!--------- contactanos --------->
@@ -41,7 +41,7 @@
 
 <section class="contact-us">
 
-    <div class="row">
+    <div id="row">
         <div class="contact-col">
             <div>
                 <i class="fa fa-home"></i>
