--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             <div class="nav-links" id="navLinks">
             <i class="fa fa-times" onclick="hideMenu()" aria-hidden="true"></i>
                 <ul>
-                    <li><a href="">HOME</a></li>
-                    <li><a href="">SOBRE NOSOTROS</a></li>
+                    <li><a href="./index.html">HOME</a></li>
+                    <li><a href="./about.html">SOBRE NOSOTROS</a></li>
                     <li><a href="">NUESTROS PRODUCTOS</a></li>
-                    <li><a href="">CONTACTOS</a></li>
+                    <li><a href="./contact.html">CONTÁCTANOS</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="showMenu()" aria-hidden="true"></i>
@@ -32,7 +32,7 @@
         <h1>La mejor Concesionaria del pais</h1>
         <p>En Mashin buscamos darle la mejor experiencia en su 
         busqueda <br>por el mejor vehiculo al mejor precio que pueda encontrar</p>
-        <a href="" class="hero-btn">Visitanos para saber mas de nosotros</a>
+        <a href="./contact.html" class="hero-btn">Visitanos para saber mas de nosotros</a>
     </div>
     </section>
 
@@ -152,7 +152,7 @@
 
 <section class="cta">
     <h1>¿Quiere saber mas sobre nosotros y nuestros productos?</h1>
-    <a href="" class="hero-btn">CONTACTENOS</a>
+    <a href="" class="hero-btn">CONTÁCTANOS</a>
 </section>
 
 <!---------Footer--------->
