--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,15 @@
                 </span>
             </div>
         </div>
-        <div class="contact-col"></div>
+        <div class="contact-col">
+            <form action="">
+                <input type="text" placeholder="Nombre" required>
+                <input type="email" placeholder="Email" required>
+                <input type="text" placeholder="Sujeto" required>
+                <textarea rows="8" placeholder="Message" required></textarea>
+                <button type="submit" class="hero-btn red-btn">Send Message</button>
+            </form>
+        </div>
     </div>
 
 </section>
