--- a/contact.html
+++ b/contact.html
@@ -33,16 +33,21 @@
 
 <!--------- contactanos --------->
 
-<section class="location">
 
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1177.2424915989466!2d-73.07053872759413!3d7.0379414114235725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x3e4cc9a622fbaed7!2zN8KwMDInMTUuNyJOIDczwrAwNCcxMy42Ilc!5e0!3m2!1ses!2sco!4v1647440020525!5m2!1ses!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-
-</section>
 
 <section class="contact-us">
-
+    <p>Tu opinión y tus comentarios son muy importantes para nosotros. Nos aseguraremos de revisar tus comentarios y darte respuesta tan pronto como nos sea posible.</p>
     <div id="row">
-        <div class="contact-col">
+        <div>
+            <form class="contact-col">
+                <input type="text" placeholder="Nombre" required>
+                <input type="email" placeholder="Email" required>
+                <input type="text" placeholder="Asunto" required>
+                <textarea rows="8" placeholder="Comentario" required></textarea><br>
+                <button type="submit" class="hero-btn red-btn">Contáctanos</button>
+            </form>
+        </div>
+        <div id="contact-col" class="contact-col">
             <div>
                 <i class="fa fa-home"></i>
                 <span>
@@ -54,7 +59,7 @@
                 <i class="fa fa-phone"></i>
                 <span>
                     <h5>+1 10345678902</h5>
-                    <p>Monday to aturday, 10AM to 6PM</p>
+                    <p>Monday to saturday, 10AM to 6PM</p>
                 </span>
             </div>
             <div>
@@ -65,16 +70,13 @@
                 </span>
             </div>
         </div>
-        <div class="contact-col">
-            <form action="">
-                <input type="text" placeholder="Nombre" required>
-                <input type="email" placeholder="Email" required>
-                <input type="text" placeholder="Sujeto" required>
-                <textarea rows="8" placeholder="Message" required></textarea>
-                <button type="submit" class="hero-btn red-btn">Send Message</button>
-            </form>
-        </div>
     </div>
+
+</section>
+
+<section class="location">
+
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1177.2424915989466!2d-73.07053872759413!3d7.0379414114235725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x3e4cc9a622fbaed7!2zN8KwMDInMTUuNyJOIDczwrAwNCcxMy42Ilc!5e0!3m2!1ses!2sco!4v1647440020525!5m2!1ses!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
 </section>
     
