Estadarización de los comentarios

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
         <h1>Sobre Nosotros</h1>
     </section>
 
-<!--------- about us content --------->
+<!---------About us content --------->
 
 <section class="about-us">
     <div class="row">
