--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
     </section>
 
-<!------campus------>
+<!------Campus------>
 
 <section class="campus">
     <h1>Nuestros Tipos de Vehiculos</h1>
