--- a/web_page/html/contact.html
+++ b/web_page/html/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, 
     initial-scale=1.0">
     <title>Concesionaria Mashin</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
@@ -16,11 +16,11 @@
 <body>
     <section class="sub-header">
         <nav>
-            <a href="index.html"><img src="images/logo.png"></a>
+            <a href="index.html"><img src="../images/logo.png"></a>
             <div class="nav-links" id="navLinks">
             <i class="fa fa-times" onclick="hideMenu()" aria-hidden="true"></i>
                 <ul>
-                    <li><a href="./index.html">HOME</a></li>
+                    <li><a href="./index.html">INICIO</a></li>
                     <li><a href="./about.html">SOBRE NOSOTROS</a></li>
                     <li><a href="">NUESTROS PRODUCTOS</a></li>
                     <li><a href="./contact.html">CONTÁCTANOS</a></li>
@@ -28,30 +28,57 @@
             </div>
             <i class="fa fa-bars" onclick="showMenu()" aria-hidden="true"></i>
         </nav>
-        <h1>Sobre Nosotros</h1>
+        <h1>Contáctanos</h1>
     </section>
 
-<!---------About us content --------->
+<!---------Contact us--------->
 
-<section class="about-us">
-    <div class="row">
-        <div class="about-col">
-            <h1>Somos la mejor concesionaria del pais</h1>
-            <p>En Mashin buscamos darle siempre la mejor calidad en nuestros productos y en servicio,
-            queremos que experimente la mejor experiencia posible al adquirir un vehiculo con nosotros
-            para que no solo sepa que puede confiar en nosotros para proximas compras, sino que tambien
-            pueda recomendarnos con sus familiares y conocidos y de esa forma poder seguir manteniendo en alto
-            nuestro compromiso con ser la ejor concesionaria del pais.
-            </p>
-            <a href="./contact.html" class="hero-btn red-btn">DESCUBRE AHORA</a>
+
+
+<section class="contact-us">
+    <p>Tu opinión y tus comentarios son muy importantes para nosotros. Nos aseguraremos de revisar tus comentarios y darte respuesta tan pronto como nos sea posible.</p>
+    <div id="row">
+        <div>
+            <form class="contact-col">
+                <input type="text" placeholder="Nombre" required>
+                <input type="email" placeholder="Email" required>
+                <input type="text" placeholder="Asunto" required>
+                <textarea rows="8" placeholder="Comentario" required></textarea><br>
+                <button type="submit" class="hero-btn red-btn">Contáctanos</button>
+            </form>
         </div>
-        <div class="about-col">
-            <img src="images/about.jpg">
+        <div id="contact-col" class="contact-col">
+            <div>
+                <i class="fa fa-home"></i>
+                <span>
+                    <h5>XYZ Road, ABC Building</h5>
+                    <p>Bangalore, Karnataka, IN</p>
+                </span>
+            </div>
+            <div>
+                <i class="fa fa-phone"></i>
+                <span>
+                    <h5>+1 10345678902</h5>
+                    <p>Monday to saturday, 10AM to 6PM</p>
+                </span>
+            </div>
+            <div>
+                <i class="fa fa-envelope-o"></i>
+                <span>
+                    <h5>info@easytutorialspro.com</h5>
+                    <p>Email us in your query</p>
+                </span>
+            </div>
         </div>
     </div>
 
 </section>
 
+<section class="location">
+
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1177.2424915989466!2d-73.07053872759413!3d7.0379414114235725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x3e4cc9a622fbaed7!2zN8KwMDInMTUuNyJOIDczwrAwNCcxMy42Ilc!5e0!3m2!1ses!2sco!4v1647440020525!5m2!1ses!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
+</section>
     
 <!---------Footer--------->
 
