--- a/web_page/html/index.html
+++ b/web_page/html/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, 
     initial-scale=1.0">
     <title>Concesionaria Mashin</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
@@ -16,11 +16,11 @@
 <body>
     <section class="header">
         <nav>
-            <a href="index.html"><img src="images/logo.png"></a>
+            <a href="index.html"><img src="../images/logo.png"></a>
             <div class="nav-links" id="navLinks">
             <i class="fa fa-times" onclick="hideMenu()" aria-hidden="true"></i>
                 <ul>
-                    <li><a href="./index.html">HOME</a></li>
+                    <li><a href="./index.html">INICIO</a></li>
                     <li><a href="./about.html">SOBRE NOSOTROS</a></li>
                     <li><a href="">NUESTROS PRODUCTOS</a></li>
                     <li><a href="./contact.html">CONTÁCTANOS</a></li>
@@ -66,19 +66,19 @@
 
     <div class="row">
         <div class="campus-col">
-            <img src="images/london.png">
+            <img src="../images/london.png">
             <div class="layer">
                 <h3>SEDAN</h3>
             </div>
         </div>
         <div class="campus-col">
-            <img src="images/newyork.png">
+            <img src="../images/newyork.png">
             <div class="layer">
                 <h3>CONVERTIBLE</h3>
             </div>
         </div>
         <div class="campus-col">
-            <img src="images/washington.png">
+            <img src="../images/washington.png">
             <div class="layer">
                 <h3>COUPE</h3>
             </div>
@@ -122,7 +122,7 @@
 
     <div class="row">
         <div class="testimonial-col">
-            <img src="images/user1.jpg">
+            <img src="../images/user1.jpg">
             <div>
                 <p>Una calidad excelente en los productos y el servicio al cliente, muy recomendado para quienes buscan buena calidad en vehiculos y servicio.</p>
                 <h3>Yuladys Maria Moreno Caro</h3>
@@ -134,7 +134,7 @@
             </div>
         </div>
         <div class="testimonial-col">
-            <img src="images/user2.jpg">
+            <img src="../images/user2.jpg">
             <div>
                 <p>En esta concesionaria recibi el mejor trato que podria haber recibido, y el vehiculo que consegui fue algo de la mejor calidad en el campo automotor, completamente recomendado.</p>
                 <h3>Julian Fernando Bohorquez</h3>
@@ -152,7 +152,7 @@
 
 <section class="cta">
     <h1>¿Quiere saber mas sobre nosotros y nuestros productos?</h1>
-    <a href="" class="hero-btn">CONTÁCTANOS</a>
+    <a href="./contact.html" class="hero-btn">CONTÁCTANOS</a>
 </section>
 
 <!---------Footer--------->
