Actualizaciones a la página realizadas en el montaje al servidor

--- a/web_page/html/about.html
+++ b/web_page/html/about.html
@@ -1,17 +1,12 @@
-<!DOCTYPE html>
+i<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
-    <script src="https://kit.fontawesome.com/56a8804a8a.js" crossorigin="anonymous"></script>
+    <script src="../js/56a8804a8a.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, 
     initial-scale=1.0">
     <title>Concesionaria Mashin</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" />
 </head>
 <body>
     <section class="sub-header">
@@ -36,14 +31,13 @@
 <section class="about-us">
     <div class="row">
         <div class="about-col">
-            <h1>Somos la mejor concesionaria del pais</h1>
+            <h1>Somos la mejor concesionaria del país</h1>
             <p>En Mashin buscamos darle siempre la mejor calidad en nuestros productos y en servicio,
             queremos que experimente la mejor experiencia posible al adquirir un vehiculo con nosotros
-            para que no solo sepa que puede confiar en nosotros para proximas compras, sino que tambien
-            pueda recomendarnos con sus familiares y conocidos y de esa forma poder seguir manteniendo en alto
-            nuestro compromiso con ser la ejor concesionaria del pais.
+            para que no solo sepa que puede confiar en nosotros para próximas compras, sino que también
+            pueda recomendarnos con sus familiares y conocidos y de esa forma poder seguir manteniendo en	     alto nuestro compromiso con ser la mejor concesionaria del país.
             </p>
-            <a href="./contact.html" class="hero-btn red-btn">DESCUBRE AHORA</a>
+            <a href="./html/contact.html" class="hero-btn red-btn">DESCUBRE AHORA</a>
         </div>
         <div class="about-col">
             <img src="../images/about.jpg">
@@ -57,12 +51,12 @@
 
 <section class="footer">
     <h4>Sobre nosotros</h4>
-    <p>Aparte de nuestros contactos con nuestros trabajadores, tambien <br>puede ver nuestras redes sociales para poder saber mas sobre nosotros.</p>
+    <p>Aparte de nuestros contactos con nuestros trabajadores, también <br>puede ver nuestras redes sociales para poder saber más sobre nosotros.</p>
     <div class="icons">
-        <i class="fa-brands fa-facebook-f"></i>
-        <i class="fa-brands fa-twitter"></i>
-        <i class="fa-brands fa-instagram"></i>
-        <i class="fa-brands fa-youtube"></i>
+        <img src="../images/facebook-f-brands.svg" alt="facebook" width="25" height="25">
+        <img src="../images/twitter-brands.svg" alt="twitter" width="25" height="25">
+        <img src="../images/instagram-brands.svg" alt="instagram" width="25" height="25">
+        <img src="../images/youtube-brands.svg" alt="youtube" width="25" height="25">
     </div>
 </section>
 
