--- a/web_page/html/index.html
+++ b/web_page/html/index.html
@@ -2,16 +2,11 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <script src="https://kit.fontawesome.com/56a8804a8a.js" crossorigin="anonymous"></script>
+    <script src="../js/56a8804a8a.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, 
     initial-scale=1.0">
     <title>Concesionaria Mashin</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" />
 </head>
 <body>
     <section class="header">
@@ -20,7 +15,7 @@
             <div class="nav-links" id="navLinks">
             <i class="fa fa-times" onclick="hideMenu()" aria-hidden="true"></i>
                 <ul>
-                    <li><a href="./index.html">INICIO</a></li>
+                    <li><a href=" ./index.html">INICIO</a></li>
                     <li><a href="./about.html">SOBRE NOSOTROS</a></li>
                     <li><a href="">NUESTROS PRODUCTOS</a></li>
                     <li><a href="./contact.html">CONTÁCTANOS</a></li>
@@ -29,10 +24,10 @@
             <i class="fa fa-bars" onclick="showMenu()" aria-hidden="true"></i>
         </nav>
     <div class="text-box">
-        <h1>La mejor Concesionaria del pais</h1>
+        <h1>La mejor Concesionaria del país</h1>
         <p>En Mashin buscamos darle la mejor experiencia en su 
-        busqueda <br>por el mejor vehiculo al mejor precio que pueda encontrar</p>
-        <a href="./contact.html" class="hero-btn">Visitanos para saber mas de nosotros</a>
+        búsqueda <br>por el mejor vehículo al mejor precio que pueda encontrar</p>
+        <a href="/contact.html" class="hero-btn">VISÍTANOS PARA SABER MÁS DE NOSOTROS</a>
     </div>
     </section>
 
@@ -45,15 +40,15 @@
         <div class="row">
             <div class="course-col">
                 <h3>Fiabilidad</h3>    
-                <p>En Mashin le aseguramos que el producto que adquirira no le fallara en ningun momento critico, puede confiar que  hasta en las peores situaciones nuestros productos siempre lograran dar lo mejor para su tranquilidad</p>
+                <p>En Mashin le aseguramos que el producto que adquirirá no le fallará en ningún momento crítico, puede confiar que hasta en las peores situaciones nuestros productos siempre lograrán dar lo mejor para su tranquilidad.</p>
             </div>
             <div class="course-col">
                 <h3>Durabilidad</h3>
-                <p>En Mashin le aseguramos que al adquirir un producto en nuestra concesionaria tendra un producto para muchos años, tendra un producto que sus hijos podran heredar y funcionara como el dia que lo adquirio.</p>
+                <p>En Mashin le aseguramos que al adquirir un producto en nuestra concesionaria tendrá un producto para muchos años, tendrá un producto que sus hijos podrán heredar y funcionará como el día que lo adquirio.</p>
             </div>
             <div class="course-col">
                 <h3>Responsabilidad</h3>
-                <p>En Mashin somos responsables de lo que prometemos, por lo que nuestras puertas siempre estan abiertas por cualquier duda o inconveniencia que pueda tener con nuestros productos.</p>
+                <p>En Mashin somos responsables de lo que prometemos, por lo que nuestras puertas siempre están abiertas por cualquier duda o inconveniencia que pueda tener con nuestros productos.</p>
             </div>
         </div>
     </section>
@@ -61,7 +56,7 @@
 <!------Campus------>
 
 <section class="campus">
-    <h1>Nuestros Tipos de Vehiculos</h1>
+    <h1>Nuestros Tipos de Vehículos</h1>
     <p>Estos son algunos de los estilos que se puede llevar a casa.</p>
 
     <div class="row">
@@ -124,25 +119,26 @@
         <div class="testimonial-col">
             <img src="../images/user1.jpg">
             <div>
-                <p>Una calidad excelente en los productos y el servicio al cliente, muy recomendado para quienes buscan buena calidad en vehiculos y servicio.</p>
+                <p>Una calidad excelente en los productos y el servicio al cliente, muy recomendado para quienes buscan buena calidad en vehículos y servicio.</p>
                 <h3>Yuladys Maria Moreno Caro</h3>
-                <i class="fa fa-star" aria-hidden="true"></i>
-                <i class="fa fa-star" aria-hidden="true"></i>
-                <i class="fa fa-star" aria-hidden="true"></i>
-                <i class="fa fa-star" aria-hidden="true"></i>
-                <i class="fa fa-star" aria-hidden="true"></i>
+                <img src="../images/star-solid.svg" alt="start" width="25" height="25">
+		<img src="../images/star-solid.svg" alt="start" width="25" height="25">
+		<img src="../images/star-solid.svg" alt="start" width="25" height="25">
+		<img src="../images/star-solid.svg" alt="start" width="25" height="25">
+		<img src="../images/star-solid.svg" alt="start" width="25" height="25">
             </div>
         </div>
         <div class="testimonial-col">
             <img src="../images/user2.jpg">
             <div>
-                <p>En esta concesionaria recibi el mejor trato que podria haber recibido, y el vehiculo que consegui fue algo de la mejor calidad en el campo automotor, completamente recomendado.</p>
+                <p>En esta concesionaria recibí el mejor trato que podría haber recibido, y el vehiculo que conseguí fue algo de la mejor calidad en el campo automotor, completamente recomendado.</p>
                 <h3>Julian Fernando Bohorquez</h3>
-                <i class="fa fa-star" aria-hidden="true"></i>
-                <i class="fa fa-star" aria-hidden="true"></i>
-                <i class="fa fa-star" aria-hidden="true"></i>
-                <i class="fa fa-star" aria-hidden="true"></i>
-                <i class="fa fa-star" aria-hidden="true"></i>
+                <img src="../images/star-solid.svg" alt="start" width="25" height="25">
+                <img src="../images/star-solid.svg" alt="start" width="25" height="25">
+                <img src="../images/star-solid.svg" alt="start" width="25" height="25">
+                <img src="../images/star-solid.svg" alt="start" width="25" height="25">
+                <img src="../images/star-solid.svg" alt="start" width="25" height="25">
+
             </div>
         </div>  
     </div>
@@ -151,20 +147,20 @@
 <!-------Call To Action------->
 
 <section class="cta">
-    <h1>¿Quiere saber mas sobre nosotros y nuestros productos?</h1>
-    <a href="./contact.html" class="hero-btn">CONTÁCTANOS</a>
+    <h1>¿Deseas saber más sobre nosotros y nuestros productos?</h1>
+    <a href="/contact.html" class="hero-btn">CONTÁCTANOS</a>
 </section>
 
 <!---------Footer--------->
 
 <section class="footer">
     <h4>Sobre nosotros</h4>
-    <p>Aparte de nuestros contactos con nuestros trabajadores, tambien <br>puede ver nuestras redes sociales para poder saber mas sobre nosotros.</p>
+    <p>Aparte de nuestros contactos con nuestros trabajadores, también <br>puede ver nuestras redes sociales para poder saber más sobre nosotros.</p>
     <div class="icons">
-        <i class="fa-brands fa-facebook-f"></i>
-        <i class="fa-brands fa-twitter"></i>
-        <i class="fa-brands fa-instagram"></i>
-        <i class="fa-brands fa-youtube"></i>
+        <img src="../images/facebook-f-brands.svg" alt="facebook" width="25" height="25">
+	<img src="../images/twitter-brands.svg" alt="twitter" width="25" height="25">
+	<img src="../images/instagram-brands.svg" alt="instagram" width="25" height="25">
+	<img src="../images/youtube-brands.svg" alt="youtube" width="25" height="25">
     </div>
 </section>
 
