Actualizacion pagina web

--- a/web_page/html/index.html
+++ b/web_page/html/index.html
@@ -17,8 +17,9 @@
                 <ul>
                     <li><a href=" ./index.html">INICIO</a></li>
                     <li><a href="./about.html">SOBRE NOSOTROS</a></li>
-                    <li><a href="">NUESTROS PRODUCTOS</a></li>
+                    <li><a href="./nuestrosProductos.html">NUESTROS PRODUCTOS</a></li>
                     <li><a href="./contact.html">CONTÁCTANOS</a></li>
+                    <li><a href="./proteccionDatos.html">POLITICA DE DATOS</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="showMenu()" aria-hidden="true"></i>
