Arreglo de la vista de sobre nosotros y cambio de una ruta en la vista de principal

--- a/web_page/html/index.html
+++ b/web_page/html/index.html
@@ -149,7 +149,7 @@
 
 <section class="cta">
     <h1>¿Deseas saber más sobre nosotros y nuestros productos?</h1>
-    <a href="/contact.html" class="hero-btn">CONTÁCTANOS</a>
+    <a href="./contact.html" class="hero-btn">CONTÁCTANOS</a>
 </section>
 
 <!---------Footer--------->
