Finalización del login y los paneles de opciones para los usuarios del sistema

--- a/web_app/html/login.html
+++ b/web_app/html/login.html
@@ -6,7 +6,7 @@
     initial-scale=1.0">
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../js/app.js">
-  <title>Formulario Registro</title>
+  <title>Concesionaria Mashin</title>
 </head>
 <body>
   <section class="header">
@@ -24,6 +24,7 @@
           <span></span>
           <label>Contraseña</label>
         </div>
+        <!--<a href="vistaUsuario.html">Hola mundo</a>-->
         <input type="submit" value="Ingresar"></input>
       </form>
     </div>
