Implementación del registro para vehículos, usuarios y clientes y definición de la vista de la tabla en la cual se mostrarán las consultas a la base de datos

--- a/web_app/html/login.html
+++ b/web_app/html/login.html
@@ -11,7 +11,7 @@
 <body>
   <section class="header">
     <img id="logo" src="../images/logo.png">
-    <div class="center">
+    <div class="registerPanel">
       <h1>Iniciar sesión</h1>
       <form action="/auth" method="POST">
         <div class="txt_field">
