--- a/web_app/html/panelAdmin.html
+++ b/web_app/html/panelAdmin.html
@@ -14,61 +14,61 @@
 			<h1>Haz clic en la sección de tu interés</h1>
 			<div id="gridContainerAdmin">
 				
-				<a href="./buscarCliente.html">
+				<a href="/html/buscarCliente.html">
 					<div class="buttonsPanelAdmin">
 						<p class"pButtons">Buscar cliente</p>
 					</div>
 				</a>
 
-				<a href="./buscarItem.html">
+				<a href="/html/buscarItem.html">
 					<div class="buttonsPanelAdmin">
 						<p class"pButtons">Buscar ítem</p>
 					</div>
 				</a>
 
-				<a href="./buscarUsuario.html">
+				<a href="/html/buscarUsuario.html">
 					<div class="buttonsPanelAdmin">
 						<p class"pButtons">Buscar usuario</p>
 					</div>
 				</a>
 
-				<a href="./informeContabilidad.html">
+				<a href="/html/informeContabilidad.html">
 					<div class="buttonsPanelAdmin">
 						<p class"pButtons">Informe de contabilidad</p>
 					</div>
 				</a>
 
-				<a href="./registroOrdenCompra.html">
+				<a href="/html/registroOrdenCompra.html">
 					<div class="buttonsPanelAdmin">
 						<p class"pButtons">Orden de compra</p>
 					</div>
 				</a>
 
-				<a href="./politicaDatos.html">
+				<a href="/html/politicaDatos.html">
 					<div class="buttonsPanelAdmin">
 						<p class"pButtons">Política de datos</p>
 					</div>
 				</a>
 
-				<a href="./registroCliente.html">
+				<a href="/html/registroCliente.html">
 					<div class="buttonsPanelAdmin">
 						<p class"pButtons">Registrar cliente</p>
 					</div>
 				</a>
 
-				<a href="./registroItem.html">
+				<a href="/html/registroVehiculo.html">
 					<div class="buttonsPanelAdmin">
-						<p class"pButtons">Registrar ítem</p>
+						<p class"pButtons">Registrar vehículo</p>
 					</div>
 				</a>
 
-				<a href="./registroUsuario.html">
+				<a href="/html/registroUsuario.html">
 					<div class="buttonsPanelAdmin">
 						<p class"pButtons">Registrar usuario</p>
 					</div>
 				</a>
 
-				<a href="./login.html">
+				<a href="/html/login.html">
 					<div class="buttonsPanelAdmin">
 						<p class"pButtons">Salir</p>
 					</div>
