--- a/web_app/html/panelUsuario.html
+++ b/web_app/html/panelUsuario.html
@@ -14,37 +14,37 @@
 			<h1>Haz clic en la sección de tu interés</h1>
 			<div id="gridContainerUser">
 
-				<a href="./buscarCliente.html">
+				<a href="/html/buscarCliente.html">
 					<div class="buttonsPanelUser">
 						<p class"pButtons">Buscar cliente</p>
 					</div>
 				</a>
 
-				<a href="./buscarItem.html">
+				<a href="/html/buscarItem.html">
 					<div class="buttonsPanelUser">
 						<p class"pButtons">Buscar ítem</p>
 					</div>
 				</a>
 
-				<a href="./registroOrdenCompra.html">
+				<a href="/html/registroOrdenCompra.html">
 					<div class="buttonsPanelUser">
 						<p class"pButtons">Orden de compra</p>
 					</div>
 				</a>
 
-				<a href="./registroCliente.html">
+				<a href="/html/registroCliente.html">
 					<div class="buttonsPanelUser">
 						<p class"pButtons">Registrar cliente</p>
 					</div>
 				</a>
 
-				<a href="./registroItem.html">
+				<a href="/html/registroVehiculo.html">
 					<div class="buttonsPanelUser">
-						<p class"pButtons">Registrar ítem</p>
+						<p class"pButtons">Registrar vehículo</p>
 					</div>
 				</a>
 
-				<a href="./login.html">
+				<a href="/html/login.html">
 					<div class="buttonsPanelUser">
 						<p class"pButtons">Salir</p>
 					</div>
